--- a/style.css
+++ b/style.css
@@ -2,6 +2,8 @@
 
 :root {
     --box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0.24);
+    --plus: #2ecc71;
+    --minus: #c0392b;
 }
 
 * {
@@ -66,11 +68,11 @@ h4 {
 }
 
 .money.plus {
-    color: #2ecc71;
+    color: var(--plus);
 }
 
 .money.minus {
-    color: #c0392b;
+    color: var(--minus);
 }
 
 label {
@@ -83,4 +85,70 @@ input[type="number"] {
     border: 1px solid #dedede;
     border-radius: 2px;
     display: block;
+    font-size: 16px;
+    padding: 10px;
+    width: 100%;
+}
+
+.btn {
+    background-color: #9c88ff;
+    box-shadow: var(--box-shadow);
+    color: white;
+    border: 0;
+    display: block;
+    font-size: 16px;
+    margin: 10px 0 30px;
+    padding: 10px;
+    width: 100%;
+    cursor: pointer;
+}
+
+.btn:focus,
+.delete-btn:focus {
+    outline: 0;
+}
+
+.list {
+    list-style-type: none;
+    padding: 0;
+    margin-bottom: 40px;
+}
+
+.list li {
+    background-color: white;
+    padding: 10px;
+    margin: 10px 0;
+    box-shadow: var(--box-shadow);
+    color: #333;
+    display: flex;
+    justify-content: space-between;
+    position: relative;
+}
+
+.list > li.plus {
+    border-right: 5px solid var(--plus);
+}
+
+.list > li.minus {
+    border-right: 5px solid var(--minus);
+}
+
+.delete-btn {
+    background-color: #e7433c;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    line-height: 20px;
+    padding: 2px 5px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    transform: translate(-100%, -50%);
+    opacity: 0;
+    transition: opacity 0.3s ease;
+    cursor: pointer;
+}
+
+.list li:hover .delete-btn {
+    opacity: 1;
 }
